--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
                 android:value="concentric.medalarm.activity.MainActivity" />
         </activity>
         <activity
-            android:name=".activity.activity_details"
+            android:name=".activity.ActivityDetails"
             android:label="@string/title_activity_activity_details" >
         </activity>
     </application>
