--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,19 @@
             android:label="@string/title_activity_main" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".activity.AlarmActivity"
+            android:label="@string/title_activity_main"
+            android:parentActivityName=".activity.MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.PARENT_ACTIVITY" />
+
+                <category android:name="android.intent.category.MainActivity" />
             </intent-filter>
         </activity>
 
@@ -37,6 +49,12 @@
             android:name=".activity.ActivityDetails"
             android:label="@string/title_activity_activity_details" >
         </activity>
+
+        <service
+            android:name=".AlarmService"
+            android:enabled="true" />
+
+        <receiver android:name=".AlarmBroadcastReceiver" />
     </application>
 
 </manifest>
