--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,11 +39,7 @@
 
         <activity
             android:name=".activity.CreateAlarm"
-            android:label="@string/title_activity_create_alarm"
-            android:parentActivityName=".activity.MainActivity" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="concentric.medalarm.activity.MainActivity" />
+            android:label="@string/title_activity_create_alarm">
         </activity>
         <activity
             android:name=".activity.ActivityDetails"
