Still Setting up for Hello world.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,11 @@
             android:name=".AlarmService"
             android:enabled="true" />
 
-        <receiver android:name=".AlarmBroadcastReceiver" />
+        <receiver android:name=".AlarmManagerHelper" >
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
