--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,7 @@ android {
     }
 }
 
+
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.mikepenz:materialdrawer:3.0.7@aar'
@@ -26,4 +27,5 @@ dependencies {
     compile 'org.jraf:android-switch-backport:1.4.0@aar'
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.android.support:design:22.2.0'
+    compile 'com.android.support:support-v4:22.2.0'
 }
