Did work on the Alarm Group activity and starting work on detecting changes to the spinner used to define the alarm type.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,6 +54,7 @@
         <activity
             android:name=".activity.AlarmGroupActivity"
             android:label="@string/title_activity_alarm_group"
+            android:exported="true"
             android:parentActivityName=".activity.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
