Needs animations but now work begins on the save function.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,7 +53,7 @@
         </activity>
         <activity
             android:name=".activity.AlarmGroupActivity"
-            android:label="@string/title_activity_alarm_group"
+            android:label="@string/createalarm"
             android:exported="true"
             android:parentActivityName=".activity.MainActivity" >
             <meta-data
