--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:21.0.+'
     compile 'com.android.support:recyclerview-v7:21.0.+'
     compile 'com.doomonafireball.betterpickers:library:1.6.0'
+    compile 'com.baoyz.swipemenulistview:library:1.1.0'
 }
