AlarmGroupManager work almost complete.

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,9 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+## Daemonize Gradle -- WILL KILL AFTER 3 HOURS OF INACTIVITY
+org.gradle.daemon=true
+## ENABLE CPU PARALLELIZATION WHEN COMPILING
+org.gradle.parallel=true
+
